# yast-s390

./: .gitignore  .rubocop.yml  .rubocop_todo.yml  .travis.yml  Dockerfile  README.md  RPMNAME  Rakefile  VERSION  yast2-s390.spec.in
.github/workflows/: ci.yml
agents/: Makefile.am  cfg_iucv_terminal_server.scr  cfg_xpram.scr  etc_iucv_ts-authorization.scr
doc/autodocs/: Makefile.am
package/: yast2-s390.changes  yast2-s390.spec
s390/: .cvsignore  yast2-s390.spec.in
s390/agents/: cfg_xpram.scr
s390/package/: yast2-s390.changes
src/: Makefile.am
src/autoyast-rnc/: dasd.rnc  zfcp.rnc
src/clients/: Makefile.am  dasd.desktop  dasd.rb  dasd.ycp  dasd_auto.rb  dasd_auto.ycp  dasd_proposal.rb  dasd_proposal.ycp  dump.desktop  dump.rb  dump.ycp  dump_auto.ycp  inst_dasd.rb  inst_dasd.ycp  inst_devices_preconf.rb  inst_zfcp.rb  inst_zfcp.ycp  iucvterminal-server.desktop  iucvterminal-server.rb  iucvterminal-server.ycp  iucvterminal.desktop  iucvterminal.rb  iucvterminal.ycp  onpanic.desktop  onpanic.rb  onpanic.ycp  s390-disk-controller.rb  s390-disk-controller.ycp  xpram.desktop  xpram.rb  xpram.ycp  zfcp.desktop  zfcp.rb  zfcp.ycp  zfcp_auto.rb  zfcp_auto.ycp  zfcp_proposal.rb  zfcp_proposal.ycp
src/config/: Makefile.am  dasd.rnc  zfcp.rnc
src/dasd/: .cvsignore  Makefile.am  dialogs.ycp  helps.ycp  wizards.ycp
src/desktop/: dasd.desktop  dump.desktop  iucvterminal-server.desktop  iucvterminal.desktop  onpanic.desktop  org.opensuse.yast.DASD.desktop  org.opensuse.yast.Dump.desktop  org.opensuse.yast.IUCVTerminal.desktop  org.opensuse.yast.IUCVTerminalServer.desktop  org.opensuse.yast.OnPanic.desktop  org.opensuse.yast.XPram.desktop  org.opensuse.yast.ZFCP.desktop  xpram.desktop  zfcp.desktop
src/dump/: dialogs.ycp  helps.ycp  ui.ycp  wizards.ycp
src/include/s390/dasd/: dialogs.rb  helps.rb  wizards.rb
src/include/s390/dump/: ui.rb
src/include/s390/iucvterminal/: ui.rb
src/include/s390/iucvterminal-server/: helps.rb  helps.ycp  ui.rb  ui.ycp
src/include/s390/onpanic/: ui.rb  ui.ycp
src/include/s390/xpram/: ui.rb  ui.ycp
src/include/s390/zfcp/: dialogs.rb  dialogs.ycp  helps.rb  wizards.rb
src/iucvterminal/: Makefile.am  ui.ycp
src/iucvterminal-server/: Makefile.am  helps.ycp  ui.ycp
src/lib/: y2s390.rb
src/lib/y2s390/: base_collection.rb  dasd.rb  dasd_actions.rb  dasds_collection.rb  dasds_reader.rb  dasds_writer.rb  format_process.rb  formatting_status.rb  hwinfo_reader.rb  zfcp.rb
src/lib/y2s390/clients/: inst_devices_preconf.rb
src/lib/y2s390/dasd_actions/: activate.rb  base.rb  deactivate.rb  diag.rb  format.rb
src/lib/y2s390/dialogs/: dasd_format.rb  devices_preconf.rb  format.rb  format_dialog.rb  format_disks.rb  mkinitrd.rb
src/lib/y2s390/issues/: dasd_format_no_eckd.rb
src/lib/y2s390/presenters/: dasd_summary.rb  dasds_summary.rb  summary.rb
src/modules/: DASDController.rb  DASDController.ycp  Dump.rb  Dump.ycp  IUCVTerminal.rb  IUCVTerminal.ycp  IUCVTerminalServer.rb  IUCVTerminalServer.ycp  Makefile.am  OnPanic.rb  OnPanic.ycp  Xpram.rb  Xpram.ycp  ZFCPController.rb  ZFCPController.ycp
src/onpanic/: Makefile.am  Makefile.in  ui.ycp
src/scrconf/: cfg_dumpconf.scr  cfg_iucv_terminal_server.scr
src/xpram/: ui.ycp
src/zfcp/: Makefile.am  dialogs.ycp  helps.ycp  wizards.ycp
test/: Makefile.am  dasd_controller_is_available_test.rb  dasd_controller_test.rb  dasd_dialogs_include_test.rb  test_helper.rb  ui_include_test.rb  ui_onpanic_include_test.rb  zfcp_controller_test.rb
test/data/: dasdview_eckd.txt  dasdview_fba.txt  dasdview_unformatted.txt  device_list.yml  fdasd_partition.txt  lsdasd.txt  lsdasd_offline.txt  probe_disk.yml  probe_disk_dasd.yml  probe_storage.yml
test/y2s390/: dasd_test.rb  (+6 more)
(+39 files in other folders)
